kubernetes_flask/kubernetes/flask_service.yaml
# load balancer который будет распределеять запросы 
# среди всех поднятых pods
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    # данный селектор должен соответствовать тому label  
    # что мы указали для pod
    app: flask-app
