kubernetes_flask/kubernetes/flask_ingress.yaml
# ingress это такая штука которая управляет трафиком и перенаправляет его
# в service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                # имя сервиса который мы сконфигурировали и
                # который управляет нашими pods
                name: flask-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
